--- a/CSS&Typography/Buttons CSS/index.html
+++ b/CSS&Typography/Buttons CSS/index.html
@@ -10,22 +10,18 @@
 
 <body>
     <h2>Normal Buttons</h2>
-    <a>
-        <button class="button">Learn More</button>
-    </a>
+    <a class="button">Learn More</a>
     <button class="button">Learn More</button>
     <button class="hover button">Learn More</button>
 
     <h2>Filled Buttons</h2>
-    <a><button class="button fill">Learn More</button></a>
+    <a class="button fill">Learn More</a>
     <button class="button fill">Learn More</button>
     <button class="button fill hover">Learn More</button>
 
     <h2>Icon buttons</h2>
-    <a>
-        <button class="button fill">
-            <i class="fas fa-arrow-down"></i> Download
-        </button>
+    <a class="button fill">
+        <i class="fas fa-arrow-down"></i> Download
     </a>
     <button class="button fill">
         <i class="fas fa-arrow-down"></i> Download
